@@ -3,10 +3,13 @@ WORKDIR /jooby
 COPY pom.xml pom.xml
 COPY src src
 COPY public public
-RUN mvn package -q
+RUN mvn package -q -P undertow
 
 FROM openjdk:11.0.3-jdk-slim
 WORKDIR /jooby
-COPY --from=maven /jooby/target/jooby-1.0.jar app.jar
+COPY --from=maven /jooby/target/jooby.jar app.jar
 COPY conf conf
-CMD ["java", "-server", "-Xms512m", "-Xmx2g", "-jar", "app.jar"]
+
+EXPOSE 8080
+
+CMD ["java", "-server", "-Xms4g", "-Xmx4g", "-XX:+AggressiveOpts", "-XX:-UseBiasedLocking", "-XX:+UseStringDeduplication", "-XX:+UseNUMA", "-XX:+UseParallelGC", "-jar", "app.jar"]
