@@ -1,14 +1,9 @@
-FROM adoptopenjdk/maven-openjdk12:latest as maven
-ENV wfly=17.0.0.Final
-ENV JAVA_OPTS="-Djava.net.preferIPv4Stack=true -Xms2g -Xmx2g"
+FROM maven:3-openjdk-17
 WORKDIR /wildfly
+EXPOSE 8080
+ENV MAVEN_OPTS="--add-exports=java.xml/com.sun.org.apache.xerces.internal.parsers=ALL-UNNAMED --add-exports=java.xml/com.sun.org.apache.xerces.internal.util=ALL-UNNAMED"
 COPY src src
+COPY scripts scripts
 COPY pom.xml pom.xml
-COPY wildfly-config.txt wildfly-config.txt
-RUN apt-get update
-RUN apt-get install -yqq wget
-RUN wget -q -O- http://download.jboss.org/wildfly/$wfly/wildfly-$wfly.tar.gz | tar xz
-RUN wget -q http://central.maven.org/maven2/mysql/mysql-connector-java/8.0.16/mysql-connector-java-8.0.16.jar -O mysql-connector-java.jar
-RUN mvn clean package -q
-RUN ./wildfly-$wfly/bin/jboss-cli.sh --file=wildfly-config.txt
-CMD ./wildfly-$wfly/bin/standalone.sh -b 0.0.0.0
+RUN mvn clean package -P bootable-jar
+CMD java -Djava.net.preferIPv4Stack=true -XX:SoftMaxHeapSize=18g -Xmx24g -XX:+UseZGC -jar target/wildfly-ee-bootable.jar
