@@ -1,35 +1,47 @@
 
 plugins {
-    id "org.jetbrains.kotlin.jvm" version "1.3.31"
+    id "org.jetbrains.kotlin.jvm" version "1.5.31"
+}
+
+ext {
+    gradleScripts = "https://raw.githubusercontent.com/hexagonkt/hexagon/1.4.7/gradle"
+
+    hexagonVersion = "1.4.7"
+    hikariVersion = "5.0.0"
+    jettyVersion = "10.0.7"
+    postgresqlVersion = "42.2.24"
+    cache2kVersion = "2.2.1.Final"
+    jacksonBlackbirdVersion = "2.13.0"
 }
 
 apply(from: "$gradleScripts/kotlin.gradle")
-apply(from: "$gradleScripts/service.gradle")
-apply(from: "$gradleScripts/testng.gradle")
+apply(from: "$gradleScripts/application.gradle")
 
 apply(plugin: "war")
 
 defaultTasks("installDist")
 
-mainClassName = "com.hexagonkt.BenchmarkKt"
-applicationDefaultJvmArgs = [ "-XX:+UseNUMA", "-XX:+UseParallelGC", "-XX:+AggressiveOpts" ]
+application {
+    mainClass.set("com.hexagonkt.BenchmarkKt")
+}
 
 war {
-    archiveName = "ROOT.war"
+    archiveFileName = "ROOT.war"
 }
 
 installDist.dependsOn("war")
 
 dependencies {
-    implementation("com.hexagonkt:store_mongodb:$hexagonVersion")
     implementation("com.hexagonkt:http_server_jetty:$hexagonVersion")
     implementation("com.hexagonkt:templates_pebble:$hexagonVersion")
+    implementation("com.hexagonkt:logging_slf4j_jul:$hexagonVersion")
+    implementation("com.hexagonkt:serialization_json:$hexagonVersion")
 
+    implementation("com.fasterxml.jackson.module:jackson-module-blackbird:$jacksonBlackbirdVersion")
+    implementation("org.cache2k:cache2k-core:$cache2kVersion")
     implementation("com.zaxxer:HikariCP:$hikariVersion")
     implementation("org.postgresql:postgresql:$postgresqlVersion")
 
     // providedCompile excludes the dependency only in the WAR, not in the distribution
     providedCompile("org.eclipse.jetty:jetty-webapp:$jettyVersion") { exclude module: "slf4j-api" }
-
-    testImplementation("com.hexagonkt:port_http_client:$hexagonVersion")
 }
